Change node version from (*) to (>= 0.10.x) in package.json

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
   "bundledDependencies": [],
   "optionalDependencies": {},
   "engines": {
-    "node": "*"
+    "node": ">= 0.10.x"
   },
   "os": [
     "darwin",
