Add istanbul as dev dependency

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "config": {},
   "dependencies": {},
   "devDependencies": {
+    "istanbul": "^0.3.18",
     "mocha": "^2.2.5"
   },
   "peerDependencies": {},
