Add codeclimate-test-reporter as dev dependency

--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   "config": {},
   "dependencies": {},
   "devDependencies": {
+    "codeclimate-test-reporter": "^0.1.0",
     "istanbul": "^0.3.18",
     "mocha": "^2.2.5"
   },
