--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "bundledDependencies": [],
   "optionalDependencies": {},
   "engines": {
-    "node": ">= 0.10.x"
+    "node": ">= 0.10.0"
   },
   "os": [
     "darwin",
