--- a/package.json
+++ b/package.json
@@ -53,7 +53,8 @@
   "bundledDependencies": [],
   "optionalDependencies": {},
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 0.10.0",
+    "npm": ">= 1.2.14"
   },
   "os": [
     "darwin",
